htdocs/css/main.css
body.spectool-web {
  padding-top: 50px;
}

.spectool-web #spectrum-viewer,
.spectool-web form,
.spectool-web #frequency-axis {
  position: relative;
  width: 740px;
  margin-left: auto;
  margin-right: auto;
}

.spectool-web #spectrum-viewer {
  height: 700px;
  overflow-y: auto;
  background-color: #ddd;
}

.spectool-web form {
  margin-top: 25px;
  margin-bottom: 25px;
}

.spectool-web form label[for="logfile"] {
  text-align: left;
}

.spectool-web #spectrum-viewer.loading {
  background-position: center center;
  background-image: url(../img/ajax-loader.gif);
  background-repeat: no-repeat;
}

.spectool-web #spectrum-viewer canvas {
  position: absolute;
  top: 0;
  left: 61px;
}

.spectool-web #spectrum-viewer #time-axis {
  position: absolute;
  top: 0;
  left: 0;
  width: 61px;
}

.spectool-web #frequency-axis {
  padding-left: 61px;
}

.spectool-web #frequency-axis ul {
  margin-bottom: 0;
}

.spectool-web #frequency-axis ul li {
  float: left;
  -box-sizing: border-box;
  text-align: center;
}

.spectool-web #frequency-axis ul li:nth-child(2n) {
  width: 40px;
}
.spectool-web #frequency-axis ul li:nth-child(2n+1) {
  width: 39px;
}
.spectool-web #frequency-axis ul li:first-child {
  width: 75px;
}
.spectool-web #frequency-axis ul li:nth-child(15) {
  width: 75px;
}


.spectool-web #frequency-axis ul li a {
  text-decoration: none;
}

.spectool-web #frequency-axis ul li.on,
.spectool-web #frequency-axis ul li:hover {
  background: #ddd;
}

.spectool-web #frequency-axis ul li:first-child {
  text-align: left;
  padding-left: 6px;
}

.spectool-web #frequency-axis ul li.clear {
  width: 1px;
  clear: both;
  float: none;
}

.spectool-web #frequency-axis .btn {
  padding: 0;
  margin: 0;
}

.spectool-web #frequency-axis .btn:hover {
  color: black;
}

.spectool-web #frequency-axis input[type="radio"] {
  padding: 0;
  margin: 0;
  width: 100%;
}

.spectool-web #frequency-axis ul li em {
  font-weight: 700;
  font-size: 110%;
}

.spectool-web #frequency-axis ul li span {
  font-size: 80%;
}

